Updated a dependency for sway

--- a/format_pc_alternative/config/packages.yml
+++ b/format_pc_alternative/config/packages.yml
@@ -91,6 +91,7 @@ sway:
   - grim  # screenshots
   - slurp # screenshots
   - kanshi # dynamic display manager
+  - brightnessctl  
 
 plasma:
   core:
