--- a/format_pc_alternative/config/packages.yml
+++ b/format_pc_alternative/config/packages.yml
@@ -40,10 +40,6 @@ gpu:
     - libvdpau lib32-libvdpau
     - opencl-nvidia
     - egl-wayland
-  optimus:
-    - *gpu_common
-    - *intel
-    - *nvidia
   radeon: &radeon
     - mesa lib32-mesa
     - vulkan-radeon lib32-vulkan-radeon
@@ -54,15 +50,14 @@ gpu:
   ati:
     - *gpu_common
     - *radeon
-    - xf86-video-ati
+    #- xf86-video-ati
   amd:
     - *gpu_common
     - *radeon
-    - xf86-video-amdgpu
+   #- xf86-video-amdgpu
 
 xorg:
   core:
-    - xorg
     - xorg-server
     - xorg-xrandr
     - xf86-input-evdev
@@ -185,6 +180,7 @@ printers:
   - gscan2pdf
   - tesseract-data-eng tesseract-data-por  # for OCR
   - pdftk  # for PDF encryption
+  - hplip
 
 core:
   - apparmor
@@ -315,7 +311,7 @@ extra:
   - ntp
   - xarchiver
   - p7zip
-  - tumbler poppler-glib ffmpegthumbnailer freetype2 raw-thumbnailer libgsf libgepub
+  - tumbler poppler-glib ffmpegthumbnailer freetype2 libgsf libgepub #raw-thumbnailer aur
 
   # sound
   - easyeffects
@@ -362,7 +358,6 @@ extra:
   # gui tools
   - wireshark-qt
   - dbeaver
-  - hardinfo
   - kdiskmark
   - blender
   - inkscape
@@ -379,3 +374,4 @@ extra:
   - texlive-most texmaker texlive-langgreek
   - evince nuspell hspell libvoikko 
 
+#- optimus-manager aur
